updated github pages
 updated github pages for cowabunga theme

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          <h1>Cowabunga Textmate Theme</h1>
+          <h1>Cowabunga Sublime Text 2 / Textmate Theme</h1>
 
 <p>the  <a href="http://http://simpsons.shoutwiki.com/wiki/Bartman">"Bartman"</a>. Bart's alter-ego. His powers are grappling a hook, climbing walls, gliding and inspiring me to make this theme. Cowabunga Dude!</p>
 
-<p><img src="http://mynameisantonio.com/images/cowabunga.png" alt="Alt text" title="Cowabunga Dude!"></p>
+<p><img src="images/screenshot.png" alt="Alt text" title="Cowabunga Dude!"></p>
 
 <h2>Installing</h2>
 
@@ -48,14 +48,20 @@
 
 <p>You’ll want to drop the file "Cowabunga.tmTheme" into:</p>
 
-<pre><code>~/Library/Application Support/TextMate/Themes
+<p>Sublime Text 2:</p>
+<pre><code>~/Library/Application\ Support/Sublime\ Text\ 2/Packages
+</code></pre>
+
+<p>Then, go into Sublime Text 2 preferences, go to Choose Scheme and select Cowabunga.</p>
+
+<p>Textmate 2:</p>
+<pre><code>~/Library/Application\ Support/Avian/Bundles/themes
+</code></pre>
+<p>Textmate:</p>
+<pre><code>~/Library/Application\ Support/TextMate/Themes
 </code></pre>
 
 <p>Then, go into TextMate’s preferences, choose the Fonts &amp; Colors tab and choose "Cowabunga" from the drop-down menu.</p>
-
-<p><img src="http://mynameisantonio.com/images/bartmate.png" alt="Alt text" title="Bart Mate"></p>
-
-<p><em><a href="http://blog.macromates.com/2010/why-2-0-is-not-developed-in-the-open/">(Bart Mate reaching for Textmate 2)</a>.</em></p>
 
 <p>If you're a Vim User, see:</p>
 
@@ -65,7 +71,7 @@
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/afj176" class="avatar"><img src="https://secure.gravatar.com/avatar/458e262c202d7bf8b590520b19241801?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a> <a href="https://github.com/afj176">afj176</a> maintains <a href="https://github.com/afj176/Cowabunga-Textmate-Theme">Cowabunga theme</a></p>
+      <p><a href="https://github.com/afj176" class="avatar"><img src="images/cowa-sign.png" width="48" height="48"/></a> <a href="https://github.com/afj176">afj176</a> maintains <a href="https://github.com/afj176/Cowabunga-Textmate-Theme">Cowabunga theme</a></p>
 
 
       </div>
